--- a/pages/tobey-maguire/spiderman1.html
+++ b/pages/tobey-maguire/spiderman1.html
@@ -1,41 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Multiverso | Spiderman</title>
-  <link href="../../assets/css/internal.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"/>
+  <!-- Estilos -->
+   <link rel="stylesheet" href="../../assets/css/internal.css">
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css">
+  <title>Spider-Man | Multiversos</title>
 </head>
 <body>
   <div class="s-wrapper">
-    
-    <video autoplay loop>
-      <source src="../../assets/videos/spiderman-2002-trailer.mp4" type="video/mp4" />
+    <video autoplay loop muted>
+      <source src="../..//assets/videos/spiderman-2002-trailer.mp4" type="video/mp4">
     </video>
 
     <div class="s-left-column">
       <nav class="navigator">
         <div class="navigator__icon">
           <a href="../../index.html">
-            <img src="../../assets/images/icons/spiderman1.png" />
-          </a>
+            <img src="../../assets/images/icons/spiderman1.png" alt=""></a>
         </div>
         <ul>
           <li><a href="#01">01</a></li>
-          <li><a href="spiderman2.html">02</a></li>
-          <li><a href="spiderman3.html">03</a></li>
+          <li><a href="#02">02</a></li>
+          <li><a href="#03">03</a></li>
         </ul>
       </nav>
     </div>
-
-
     <div class="s-main-content">
       <div class="s-main-content__top">
         <div class="s-logo">
-          <img src="../../assets/images/spiderman-tobey/movie-01/logo.png" alt="Spiderman (2002)"
-            title="Spiderman (2002)" />
+          <img src="../../assets/images/spiderman-tobey/movie-01/logo.png" alt="Spiderman (2002)" title="Spiderman (2002)">
         </div>
 
         <div class="s-description">
@@ -52,10 +47,10 @@
               para para ganhar dinheiro, adotando o nome de Homem-Aranha e se apresentando em lutas de exibição. Porém,
               ao presenciar o assassinando de seu tio Ben e sentir-se culpado, Peter decide não mais usar seus poderes
               para proveito próprio e sim para enfrentar o mal, tendo como seu primeiro grande desafio o psicótico
-              Duende Verde.</p>
+              Duende Verde.
+            </p>
           </div>
         </div>
-
         <div class="s-links">
           <ul>
             <li>
@@ -70,35 +65,21 @@
             </li>
           </ul>
         </div>
-
       </div>
-
       <div class="s-main-content__bottom">
         <div class="gallery">
           <ul>
-            <li>
-              <a data-fancybox href="../../assets/images/spiderman-tobey/movie-01/gallery/image-01-full.jpg">
-                <img src="../../assets/images/spiderman-tobey/movie-01/gallery/image-01.png" alt="">
-              </a>
-            </li>
-            <li>
-              <a data-fancybox href="../../assets/images/spiderman-tobey/movie-01/gallery/image-02-full.jpg">
-                <img src="../../assets/images/spiderman-tobey/movie-01/gallery/image-02.png" alt="">
-              </a>
-            </li>
-            <li>
-              <a data-fancybox href="../../assets/images/spiderman-tobey/movie-01/gallery/image-03-full.jpg">
-                <img src="../../assets/images/spiderman-tobey/movie-01/gallery/image-03.png" alt="">
-              </a>
-            </li>
+            <li><a data-fancybox href="../../assets/images/spiderman-tobey/movie-01/gallery/image-01-full.jpg"><img src="../../assets/images/spiderman-tobey/movie-01/gallery/image-01.png" alt=""></a></li>
+            <li><a data-fancybox href="../../assets/images/spiderman-tobey/movie-01/gallery/image-02-full.jpg"><img src="../../assets/images/spiderman-tobey/movie-01/gallery/image-02.png" alt=""></a></li>
+            <li><a data-fancybox href="../../assets/images/spiderman-tobey/movie-01/gallery/image-03-full.jpg"><img src="../../assets/images/spiderman-tobey/movie-01/gallery/image-03.png" alt=""></a></li>
           </ul>
         </div>
       </div>
     </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/@ui@4.0/dist/fancybox.umd.js"></script>
   <script>
-    //  JavaScript will go here
+
   </script>
 </body>
 </html>
